<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightText"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.pickaboo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallPadding"
        android:layout_marginTop="@dimen/bigPadding"
        android:text="@string/welcome"
        android:textColor="@color/primaryDarkText"
        android:textSize="@dimen/headSize" />

    <TextView
        style="@style/normalTextStyle"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/bigPadding"
        android:text="@string/intro"
        android:textColor="@color/secondaryDarkText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extraBigPadding"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:paddingLeft="@dimen/smallPadding"
            android:paddingRight="@dimen/smallPadding"
            android:paddingStart="@dimen/smallPadding" />

        <ImageButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/searchButtonDimen"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/smallPadding"
            android:layout_marginStart="@dimen/smallPadding"
            android:onClick="search"
            android:src="@drawable/ic_search_white_24dp"
            tools:ignore="contentDescription" />

    </LinearLayout>

    <TextView
        style="@style/boldTitleStyle"
        android:text="@string/last_releases" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/releases_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/smallPadding" />

        <!-- Empty view is only visible when the list has no items -->
        <TextView
            android:id="@+id/empty_text"
            style="@style/normalTextStyle"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true" />

        <!-- Loading indicator is only shown before the first load -->
        <ProgressBar
            android:id="@+id/loading_spinner"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>
